tests/invalid/no_method.err_exp
no_method.m:035: In clause for type class method implementation:
no_method.m:035:   error: wrong number of arguments (3; should be 2) in use of
no_method.m:035:   constructor `one_str'.
no_method.m:043: In clause for type class method implementation:
no_method.m:043:   type error in unification of variable `HeadVar__4'
no_method.m:043:   and functor `three_str'/3.
no_method.m:043:   variable `HeadVar__4' has type
no_method.m:043:     string,
no_method.m:043:   functor `three_str'/3 has type
no_method.m:043:     three_str(string, string, string): func(
no_method.m:043:       int
no_method.m:043:     ) = string.
For more information, recompile with `-E'.
